# wallet

./: Cargo.toml  README.md
src/: main.rs
src/algorithms/: algorithms.rs
src/banners/: banners.rs
src/cli/: cli.rs
src/filemanager/: filemanager.rs  mod.rs
src/investmentlib/: algorithms.rs  consumeapi.rs  files.rs  mod.rs  structsinvestiments.rs
src/objects/: objects.rs
src/walletlib/: algorithms.rs  banners.rs  consumeapi.rs  files.rs  mod.rs  objects.rs
